# serverless-trip-saga-python

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  cdk.json  pipeline_stack.py  pyproject.toml  requirements-dev.txt  requirements.txt  serverless_trip_saga_stack.py
.github/workflows/: lint.yml  test.yml
docs/: 01_architecture_and_design.md  02_testing_guidelines.md
docs/hands-on/: 01-project-setup.md  02-dynamodb-design.md  03-shared-kernel-and-layers.md  04-service-implementation-flight.md  05-service-implementation-hotel-payment.md  06-step-functions-orchestration.md  07-saga-compensation.md  08-api-gateway-integration.md  09-cicd-codepipeline.md  10-canary-deployment.md  11-observability-datadog.md  12_e2e_verification_and_chaos.md  13_advanced_observability_datadog.md  14_lambda_direct_verification.md  15_dynamodb_streams_search_table.md  README.md
events/: sfn_input_hotel_fail.json  sfn_input_payment_fail.json  sfn_input_success.json
events/lambda/: flight_cancel.json  flight_reserve.json  flight_reserve_invalid.json  get_trip.json  hotel_reserve.json  hotel_reserve_invalid.json  list_trips.json  payment_process.json  payment_process_invalid.json
infra/constructs/: __init__.py  api.py  cdn.py  database.py  deployment.py  functions.py  layers.py  observability.py  orchestration.py
layers/common_layer/: requirements.txt
services/flight/domain/: __init__.py
services/flight/handlers/: reserve.py
services/flight/infrastructure/: dynamodb_booking_repository.py
services/hotel/applications/: reserve_hotel.py
services/hotel/domain/: __init__.py
services/hotel/handlers/: request_models.py  reserve.py
services/hotel/infrastructure/: dynamodb_hotel_booking_repository.py
services/payment/applications/: process_payment.py
services/payment/domain/: __init__.py
services/payment/handlers/: process.py  response_models.py
services/payment/infrastructure/: dynamodb_payment_repository.py
services/shared/domain/: __init__.py  aggregate.py  (+3 more)
src/authorizer/: handler.py
tests/unit/: test_serverless_trip_saga_stack.py
(+113 files in other folders)
