[project]
name = "serverless-trip-saga-python"
version = "0.1.0"
description = "AWS CDK Serverless Trip Saga Pattern Implementation"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.234.1,<3.0.0",
    "constructs>=10.0.0,<11.0.0",
    "aws-lambda-powertools[all]",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "ruff",
    "boto3",
    "boto3-stubs[dynamodb]",
    "mypy",
]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["constructs.*", "aws_cdk.*"]
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-third-party = ["constructs"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
